# SemanticTree

./: .coveragerc  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
src/semantic_tree/: semtree.py  skeleton.py
tests/: conftest.py  test_skeleton.py
