[tool.poetry]
name = "semantic-tree"
version = "1.0.3"
description = "Creates a visualization of the semantic neighborhood of a word in a Gensim's Word2Vec vector space model using the Gource visualizer"
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
license = "MIT"
homepage = "https://github.com/fccoelho/SemanticTree"
repository = "https://github.com/fccoelho/SemanticTree"
readme = "README.md"
packages = [{include = "semantic_tree", from = 'src'}]

[tool.poetry.urls]
Changelog = "https://github.com/fccoelho/SemanticTree/releases"

[tool.poetry.dependencies]
python = "^3.10"
gensim = "^4.2.0"
networkx = "^2.8.8"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
nox = "^2022.11.21"
nox-poetry = "^1.0.2"
autoflake8 = "^0.4.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
semanticTree = "semantic_tree.semtree:run"
semanticTreeDemo = "semantic_tree.semtree:demo"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["semantic_tree", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 80
